# nba_playerdraft_predictor

./: Makefile  README.md  pyproject.toml  requirements.txt
advmla_assignment_1/: __init__.py  dataset.py  features.py  plots.py
advmla_assignment_1/modeling/: predict.py  train.py
models/: best_model_25721325.pkl  best_model_25739083.pkl  best_model_smote_lg_14121545.pkl  logistic_regression_model.pkl
notebooks/Ashley Wang/: 36120-25SP-AT1-group24_14121545-experiment2_xgboost.ipynb  36120-25SP-AT1-group24_14121545-experiment3_randomforest.ipynb  36120-25SP-AT1-group24_14121545-experiment4.ipynb  Experiment1_LR
notebooks/ManhTuan_Nguyen/: 36120-25SP-AT1-group_24-25739083-experiment_1.ipynb  36120-25SP-AT1-group_24-25739083-experiment_2.ipynb  36120-25SP-AT1-group_24-25739083-experiment_3.ipynb  36120-25SP-AT1-group_24-25739083-experiment_4.ipynb  drafted_details.csv  submission.csv
notebooks/ManhTuan_Nguyen/data_processed/: X_test_reg.csv  X_test_tree.csv  X_train_reg.csv  X_train_tree.csv  X_val_reg.csv  X_val_tree.csv  y_train_tree.csv
notebooks/ManhTuan_Nguyen/models/: lgb_default.joblib  (+7 more)
notebooks/Pranav Sathyababu/: 36120-25SP-AT1-24-25588726-AT1-experiment_0.ipynb  36120-25SP-AT1-24-25588726-experiment_1.ipynb  36120-25SP-AT1-24-25588726-experiment_2.ipynb  36120-25SP-AT1-24-25588726-experiment_3.ipynb  submission.xlsx
notebooks/Weishu Sun/: 36120_25SP_AT1_group_24_25721325_experiment1 (1).ipynb  36120_25SP_AT1_group_24_25721325_experiment_2.ipynb  36120_25SP_AT1_group_24_25721325_experiment_3.ipynb  36120_25SP_AT1_group_24_25721325_experiment_4.ipynb
